--- a/scss/words.scss
+++ b/scss/words.scss
@@ -14,7 +14,6 @@ body {
 }
 
 header {
-  color: #fafafa;
   position: relative;
   height: 100vh;
   width: 100vw;
@@ -26,12 +25,29 @@ header {
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(0,180,80,.05);
+    background-color: rgba(0,80,180,.5);
+    background: rgba(255,107,107,1);
+    background: -moz-linear-gradient(left, rgba(255,107,107,1) 0%, rgba(85,98,112,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,107,107,1)), color-stop(100%, rgba(85,98,112,1)));
+    background: -webkit-linear-gradient(left, rgba(255,107,107,1) 0%, rgba(85,98,112,1) 100%);
+    background: -o-linear-gradient(left, rgba(255,107,107,1) 0%, rgba(85,98,112,1) 100%);
+    background: -ms-linear-gradient(left, rgba(255,107,107,1) 0%, rgba(85,98,112,1) 100%);
+    background: linear-gradient(to right, rgba(255,107,107,1) 0%, rgba(85,98,112,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6b6b', endColorstr='#556270', GradientType=1 );
+    opacity: 0.66;
     z-index: -1;
   }
 }
 
 h1 {
   margin: 0;
-  font-size: 17rem;
+  color: #FFF;
+  padding-left: 5vw;
+  font-size: 14vw;
+  background: url('../img/words.jpg');
+  background-size: center;
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(0,0,0,.8);
+  position: relative;
 }
