--- a/css/seabass.css
+++ b/css/seabass.css
@@ -31,26 +31,78 @@ header {
     opacity: 0.66;
     z-index: -1; }
 
+@keyframes wave {
+  from {
+    transform: translateY(0); }
+  to {
+    transform: translateY(-20px); } }
+
 h1 {
   margin: auto;
   color: #FFF;
   font-size: 24vmax;
   line-height: 12vmax;
-  letter-spacing: 1rem;
+  letter-spacing: -3.5rem;
   background-size: center;
   background-repeat: no-repeat;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: rgba(0, 0, 0, 0.8);
-  position: relative; }
-  h1:after {
-    content: 'seabass';
-    position: absolute;
-    left: 2vmax;
-    bottom: -1vmax;
-    opacity: .5; }
+  -webkit-text-fill-color: rgba(0, 0, 0, 0.8); }
+  h1 span {
+    display: inline-block;
+    animation-duration: 7s;
+    animation-name: wave;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    position: relative; }
+    h1 span:after {
+      position: absolute;
+      left: 2vmax;
+      bottom: -1vmax;
+      opacity: 0.5; }
+    h1 span:nth-of-type(1):after {
+      content: 's'; }
+    h1 span:nth-of-type(2):after {
+      content: 'e'; }
+    h1 span:nth-of-type(3):after {
+      content: 'a'; }
+    h1 span:nth-of-type(4):after {
+      content: 'b'; }
+    h1 span:nth-of-type(5):after {
+      content: 'a'; }
+    h1 span:nth-of-type(6):after {
+      content: 's'; }
+    h1 span:nth-of-type(7):after {
+      content: 's'; }
 
-@keyframes wave {
-  from {
-    transform: translateY(0); }
-  to {
-    transform: translateY(-5vmax); } }
+h1 :nth-child(8n + 0) {
+  /*animation-delay: -14s;*/
+  animation-delay: 0s; }
+
+h1 :nth-child(8n + 1) {
+  /*animation-delay: -12.25s;*/
+  animation-delay: 1s; }
+
+h1 :nth-child(8n + 2) {
+  /*animation-delay: -10.5s;*/
+  animation-delay: 2s; }
+
+h1 :nth-child(8n + 3) {
+  /*animation-delay: -8.75s;*/
+  animation-delay: 3s; }
+
+h1 :nth-child(8n + 4) {
+  /*animation-delay: -7s;*/
+  animation-delay: 4s; }
+
+h1 :nth-child(8n + 5) {
+  /*animation-delay: -5.25s;*/
+  animation-delay: 5s; }
+
+h1 :nth-child(8n + 6) {
+  /*animation-delay: -3.5s;*/
+  animation-delay: 6s; }
+
+h1 :nth-child(8n + 7) {
+  /*animation-delay: -1.75s;*/
+  animation-delay: 7s; }
